--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
         <TableRow
@@ -37,10 +37,36 @@
                 android:id="@+id/btnClear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_span="2"
                 android:text="C"
                 android:textColor="#000000"
-                app:backgroundTint="#C3C3C3" />
+                app:backgroundTint="#C3C3C3"
+                app:rippleColor="#FFFFFF" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnOpenBracket"
+                    android:layout_width="45dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="("
+                    android:textColor="#000000"
+                    app:backgroundTint="#C3C3C3"
+                    app:rippleColor="#FFFFFF" />
+
+                <Button
+                    android:id="@+id/btnCloseBracket"
+                    android:layout_width="45dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text=")"
+                    android:textColor="#000000"
+                    app:backgroundTint="#C3C3C3"
+                    app:rippleColor="#FFFFFF" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/btProcent"
@@ -50,7 +76,8 @@
                 android:onClick="clickProcent"
                 android:text="%"
                 android:textColor="#000000"
-                app:backgroundTint="#C3C3C3" />
+                app:backgroundTint="#C3C3C3"
+                app:rippleColor="#FFFFFF" />
 
             <Button
                 android:id="@+id/btnDiv"
