--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,240 +2,229 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ConstrainLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:onClick="addChar"
-    tools:context=".MainActivity">
+             android:layout_height="match_parent">
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+    <Button
+        android:id="@+id/btnOpenBracket"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:onClick="addChar"
+        android:text="("
+        android:textColor="#000000"
+        app:backgroundTint="#C3C3C3"
+        app:layout_constraintBottom_toTopOf="@+id/btn8"
+        app:layout_constraintStart_toEndOf="@+id/btnClear"
+        app:rippleColor="#FFFFFF" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <Button
+        android:id="@+id/btnCloseBracket"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:onClick="addChar"
+        android:text=")"
+        android:textColor="#000000"
+        app:backgroundTint="#C3C3C3"
+        app:layout_constraintBottom_toTopOf="@+id/btn8"
+        app:layout_constraintStart_toEndOf="@+id/btnOpenBracket"
+        app:rippleColor="#FFFFFF" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/btProcent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="2"
+        android:onClick="clickProcent"
+        android:text="%"
+        android:textColor="#000000"
+        app:backgroundTint="#C3C3C3"
+        app:layout_constraintBottom_toTopOf="@+id/btn9"
+        app:layout_constraintStart_toEndOf="@+id/btnCloseBracket"
+        app:rippleColor="#FFFFFF" />
 
-            <TextView
-                android:id="@+id/ResultField"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_span="4" />
-        </TableRow>
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="1"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btn0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="2"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btn0"
+        app:layout_constraintStart_toEndOf="@+id/btn1" />
 
-            <Button
-                android:id="@+id/btnClear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="clickClear"
-                android:text="C"
-                android:textColor="#000000"
-                app:backgroundTint="#C3C3C3"
-                app:rippleColor="#FFFFFF" />
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="3"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btnPoint"
+        app:layout_constraintStart_toEndOf="@+id/btn2" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="4"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btn1"
+        app:layout_constraintStart_toStartOf="parent" />
 
-                <Button
-                    android:id="@+id/btnOpenBracket"
-                    android:layout_width="45dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="addChar"
-                    android:text="("
-                    android:textColor="#000000"
-                    app:backgroundTint="#C3C3C3"
-                    app:rippleColor="#FFFFFF" />
+    <Button
+        android:id="@+id/btn5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="5"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btn2"
+        app:layout_constraintStart_toEndOf="@+id/btn4" />
 
-                <Button
-                    android:id="@+id/btnCloseBracket"
-                    android:layout_width="45dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="addChar"
-                    android:text=")"
-                    android:textColor="#000000"
-                    app:backgroundTint="#C3C3C3"
-                    app:rippleColor="#FFFFFF" />
-            </LinearLayout>
+    <Button
+        android:id="@+id/btn6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="6"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btn3"
+        app:layout_constraintStart_toEndOf="@+id/btn5" />
 
-            <Button
-                android:id="@+id/btProcent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:onClick="clickProcent"
-                android:text="%"
-                android:textColor="#000000"
-                app:backgroundTint="#C3C3C3"
-                app:rippleColor="#FFFFFF" />
+    <Button
+        android:id="@+id/btn7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="7"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btn4"
+        app:layout_constraintStart_toStartOf="parent" />
 
-            <Button
-                android:id="@+id/btnDiv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="3"
-                android:onClick="addChar"
-                android:text="/"
-                app:backgroundTint="#FFAB00" />
-        </TableRow>
+    <Button
+        android:id="@+id/btn8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="8"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btn5"
+        app:layout_constraintStart_toEndOf="@+id/btn7" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/btn9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="9"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toTopOf="@+id/btn6"
+        app:layout_constraintStart_toEndOf="@+id/btn8" />
 
-            <Button
-                android:id="@+id/btn1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="1"
-                app:backgroundTint="#3C3C3C" />
+    <Button
+        android:id="@+id/btnPoint"
+        android:layout_width="92dp"
+        android:layout_height="50dp"
+        android:layout_column="2"
+        android:onClick="addChar"
+        android:text="."
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn0" />
 
-            <Button
-                android:id="@+id/btn2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="2"
-                app:backgroundTint="#3C3C3C" />
+    <Button
+        android:id="@+id/btnClear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="clickClear"
+        android:text="C"
+        android:textColor="#000000"
+        app:backgroundTint="#C3C3C3"
+        app:layout_constraintBottom_toTopOf="@+id/btn7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="#FFFFFF" />
 
-            <Button
-                android:id="@+id/btn3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="3"
-                app:backgroundTint="#3C3C3C" />
+    <Button
+        android:id="@+id/btn0"
+        android:layout_width="173dp"
+        android:layout_height="48dp"
+        android:onClick="addChar"
+        android:text="0"
+        app:backgroundTint="#3C3C3C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-            <Button
-                android:id="@+id/btnSum"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="+"
-                app:backgroundTint="#FFAB00" />
+    <Button
+        android:id="@+id/btnDiv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="3"
+        android:onClick="addChar"
+        android:text="/"
+        app:backgroundTint="#FFAB00"
+        app:layout_constraintBottom_toTopOf="@+id/btnMul"
+        app:layout_constraintStart_toEndOf="@+id/btProcent" />
 
-        </TableRow>
+    <Button
+        android:id="@+id/btnSub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="-"
+        app:backgroundTint="#FFAB00"
+        app:layout_constraintBottom_toTopOf="@+id/btnSum"
+        app:layout_constraintStart_toEndOf="@+id/btn6" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/btnResult"
+        android:layout_width="87dp"
+        android:layout_height="48dp"
+        android:layout_column="3"
+        android:onClick="clickResult"
+        android:text="="
+        app:backgroundTint="#FFAB00"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnPoint" />
 
-            <Button
-                android:id="@+id/btn4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="4"
-                app:backgroundTint="#3C3C3C" />
+    <Button
+        android:id="@+id/btnMul"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="*"
+        app:backgroundTint="#FFAB00"
+        app:layout_constraintBottom_toTopOf="@+id/btnSub"
+        app:layout_constraintStart_toEndOf="@+id/btn9" />
 
-            <Button
-                android:id="@+id/btn5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="5"
-                app:backgroundTint="#3C3C3C" />
+    <Button
+        android:id="@+id/btnSum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addChar"
+        android:text="+"
+        app:backgroundTint="#FFAB00"
+        app:layout_constraintBottom_toTopOf="@+id/btnResult"
+        app:layout_constraintStart_toEndOf="@+id/btn3" />
 
-            <Button
-                android:id="@+id/btn6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="6"
-                app:backgroundTint="#3C3C3C" />
+    <TextView
+        android:id="@+id/resultField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/btnSub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="-"
-                app:backgroundTint="#FFAB00" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/btn7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="7"
-                app:backgroundTint="#3C3C3C" />
-
-            <Button
-                android:id="@+id/btn8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="8"
-                app:backgroundTint="#3C3C3C" />
-
-            <Button
-                android:id="@+id/btn9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="9"
-                app:backgroundTint="#3C3C3C" />
-
-            <Button
-                android:id="@+id/btnMul"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addChar"
-                android:text="*"
-                app:backgroundTint="#FFAB00" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/btn0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_span="2"
-                android:onClick="addChar"
-                android:text="0"
-                app:backgroundTint="#3C3C3C" />
-
-            <Button
-                android:id="@+id/btnPoint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:onClick="addChar"
-                android:text="."
-                app:backgroundTint="#3C3C3C" />
-
-            <Button
-                android:id="@+id/btnResult"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="3"
-                android:onClick="clickResult"
-                android:text="="
-                app:backgroundTint="#FFAB00" />
-
-        </TableRow>
-
-    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
